# friend_maker

./: .claudeignore  .env.example  .gitignore  ANCHORED_SUMMARY.md  COMPLEX_INSTRUCTIONS_SUMMARY.md  Dockerfile  Dockerfile.backend  Dockerfile.kasm  Dockerfile.rust  README.md  REVIEW.md  build.spec  deploy.sh  docker-compose.yml  entrypoint.sh  init_skyvern_key.sh  kasm_login.mjs  kasmvnc.yaml  litellm_config.yaml  main.py  nginx-kasm.conf  nixpacks.toml  notary_sites.mjs  notary_templates.json  proxy.js  requirements.txt  rotary.mjs  setup.mjs  setup_cron.sh  setup_vps.sh  start.sh  tiktok.mjs  tmp_debug_capture.sh  tmp_test_all.sh  tmp_test_bot_inst.sh  vnc_browser.mjs  vnc_google.mjs  vnc_social.mjs
web/: .dockerignore  .env.example  .gitignore  ANCHORED_SUMMARY.md  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  gmail.mjs  gmail_login.mjs  ig.mjs  manage.py  nc.mjs  purge.mjs  pyproject.toml  requirements.txt  run_campaign.mjs  setup.mjs  setup_cron.sh  setup_vps.sh  substack.mjs  tmp_check_ai.sh  tmp_debug_capture.sh  tmp_test_fixes.sh  tmp_test_img.sh  tmp_test_img_upload.sh  vnc_browser.mjs  vnc_google.mjs  vnc_social.mjs
web/app/: config.py  main.py  test_ai.py
web/frontend/: Dockerfile  docker-compose.yml  middleware.ts  package-lock.json  package.json
web/notarycafe-skill/: HOOK.md  index.js  package.json
web/openclaw-skill/: HOOK.md  SKILL.md  index.js  index.ts  install_openclaw.sh  openclaw.plugin.json  package.json  setup_standalone.sh  setup_vps.sh  test_plugin.cjs
web/tests/: test_automation.py  test_builder_smoke.py  test_twitter.py  (+1 more)
(+92 files in other folders)
